Removed scrollbar to avoid spacebar keyboard input conflict. Updated controls description. Fixed pepper path to start closer to the right border.

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,14 @@
+/* Remove Scrollbar */
+body::-webkit-scrollbar {
+   display: none;
+} /* Chrome, Safari and Opera */
+body {
+   -ms-overflow-style: none;
+}  /* IE and Edge */
+html {
+   scrollbar-width: none;
+}  /* Firefox */
+
 * {
    box-sizing: border-box;
    margin: 0;
@@ -57,8 +68,8 @@ body {
    animation: pepper 1s infinite linear;
 }
 @keyframes pepper{
-   0%{left: 500px}
-   100%{left: -20px}
+   0%{left: 570px}
+   100%{left: -10px}
 }
 
 /* Footer */
@@ -67,5 +78,5 @@ body {
     font-size: 2em;
 }
 .hb_logo {
-   max-width: 50px;
+   max-width: 30px;
 }
